Removed extra hypens

--- a/source/_posts/2007-12-07-software-is-art.html
+++ b/source/_posts/2007-12-07-software-is-art.html
@@ -9,4 +9,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>"Software design is an art, and like any art it cannot be taught and <br />learned as a precise science, by means of theorems and formulas."</blockquote><cite>-- Domain-Driven Design Quickly, by Abel Avram & Floyd Marinescu</cite></div>
+<blockquote>"Software design is an art, and like any art it cannot be taught and <br />learned as a precise science, by means of theorems and formulas."</blockquote><cite> Domain-Driven Design Quickly, by Abel Avram & Floyd Marinescu</cite></div>
