--- a/source/_posts/2008-06-01-key-to-success.html
+++ b/source/_posts/2008-06-01-key-to-success.html
@@ -9,4 +9,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>I don't know the key to success, but the key to failure is trying to please everybody.</blockquote><cite>-- Bill Cosby</cite></div>
+<blockquote>I don't know the key to success, but the key to failure is trying to please everybody.</blockquote><cite> Bill Cosby</cite></div>
