--- a/source/_posts/2008-06-15-experience.html
+++ b/source/_posts/2008-06-15-experience.html
@@ -10,4 +10,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>Experience is what you get when you don't get what you want.</blockquote><cite>-- Dan Stanford</cite></div>
+<blockquote>Experience is what you get when you don't get what you want.</blockquote><cite> Dan Stanford</cite></div>
