--- a/source/_posts/2008-06-18-how-does-project-get-to-be-year-behind.html
+++ b/source/_posts/2008-06-18-how-does-project-get-to-be-year-behind.html
@@ -11,4 +11,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>One day at a time.<br /><cite>-- <a href="http://www.cs.unc.edu/~brooks/">Fred Brooks</a>, <a href="http://www.amazon.com/Mythical-Man-Month-Software-Engineering-Anniversary/dp/0201835959">The Mythical Man-Month</a>.</cite></blockquote></div>
+<blockquote>One day at a time.<br /><cite> <a href="http://www.cs.unc.edu/~brooks/">Fred Brooks</a>, <a href="http://www.amazon.com/Mythical-Man-Month-Software-Engineering-Anniversary/dp/0201835959">The Mythical Man-Month</a>.</cite></blockquote></div>
