--- a/source/_posts/2008-12-04-achieving-mastery.html
+++ b/source/_posts/2008-12-04-achieving-mastery.html
@@ -9,4 +9,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>First, master the fundamentals.</blockquote><cite>-- Larry Bird</cite></div>
+<blockquote>First, master the fundamentals.</blockquote><cite> Larry Bird</cite></div>
