--- a/source/_posts/2008-12-04-assumptions.html
+++ b/source/_posts/2008-12-04-assumptions.html
@@ -11,4 +11,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>Assumption is the mother of all screw-ups.</blockquote><cite>-- Wethern's Law of Suspended Judgment</cite></div>
+<blockquote>Assumption is the mother of all screw-ups.</blockquote><cite> Wethern's Law of Suspended Judgment</cite></div>
