--- a/source/_posts/2008-12-04-quality.html
+++ b/source/_posts/2008-12-04-quality.html
@@ -11,4 +11,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>Quality means doing it right when no one is looking.</blockquote><cite>-- Henry Ford</cite></div>
+<blockquote>Quality means doing it right when no one is looking.</blockquote><cite> Henry Ford</cite></div>
