--- a/source/_posts/2009-03-12-price-of-change.html
+++ b/source/_posts/2009-03-12-price-of-change.html
@@ -9,4 +9,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>Change is expensive, no question about it. However, consider the alternative—stagnation.</blockquote><cite>-- Jim Highsmith</cite></div>
+<blockquote>Change is expensive, no question about it. However, consider the alternative—stagnation.</blockquote><cite> Jim Highsmith</cite></div>
