--- a/source/_posts/2009-03-14-to-plan-or-not-to-plan.html
+++ b/source/_posts/2009-03-14-to-plan-or-not-to-plan.html
@@ -9,4 +9,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>In preparing for battle I have always found that plans are useless, but planning is indispensable.</blockquote><cite>-- Dwight D. Eisenhower</cite></div>
+<blockquote>In preparing for battle I have always found that plans are useless, but planning is indispensable.</blockquote><cite> Dwight D. Eisenhower</cite></div>
