--- a/source/_posts/2009-05-08-excellence.html
+++ b/source/_posts/2009-05-08-excellence.html
@@ -10,4 +10,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>We are what we repeatedly do. Excellence, then, is not an act, but a habit.<br /><cite>-- Aristotle</cite></blockquote></div>
+<blockquote>We are what we repeatedly do. Excellence, then, is not an act, but a habit.<br /><cite> Aristotle</cite></blockquote></div>
