--- a/source/_posts/2009-10-16-java-and-lack-of-coc.html
+++ b/source/_posts/2009-10-16-java-and-lack-of-coc.html
@@ -10,4 +10,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>   <p>&quot;Java is a DSL to transform big Xml documents into long exception stack traces.&quot;</p>   <cite>-- Scott Bellware</cite></blockquote>  </div>
+<blockquote>   <p>&quot;Java is a DSL to transform big Xml documents into long exception stack traces.&quot;</p>   <cite> Scott Bellware</cite></blockquote>  </div>
