--- a/source/_posts/2011-10-23-change.html
+++ b/source/_posts/2011-10-23-change.html
@@ -10,4 +10,4 @@ categories:
 ---
 
 <div class='post'>
-<div dir="ltr" style="text-align: left;" trbidi="on"><blockquote>“You never change things by ﬁghting the existing reality. To change something, build a new model that makes the existing model obsolete.” <cite>— R. Buckminster Fuller</cite></blockquote></div></div>
+<div dir="ltr" style="text-align: left;" trbidi="on"><blockquote>“You never change things by ﬁghting the existing reality. To change something, build a new model that makes the existing model obsolete.” <cite> R. Buckminster Fuller</cite></blockquote></div></div>
