--- a/source/_posts/2008-04-06-you-better-dont-break-build.html
+++ b/source/_posts/2008-04-06-you-better-dont-break-build.html
@@ -9,4 +9,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>/trunk must compile and pass regression tests at all times. Committers who violate this rule are publically humiliated.</blockquote><cite>-- <a href="http://svn.collab.net/repos/svn/trunk/doc/user/svn-best-practices.html">svn best practices</a></cite></div>
+<blockquote>/trunk must compile and pass regression tests at all times. Committers who violate this rule are publically humiliated.</blockquote><cite> <a href="http://svn.collab.net/repos/svn/trunk/doc/user/svn-best-practices.html">svn best practices</a></cite></div>
