--- a/source/_posts/2008-06-18-fix-time-and-budget-flex-scope.html
+++ b/source/_posts/2008-06-18-fix-time-and-budget-flex-scope.html
@@ -10,4 +10,4 @@ categories:
 ---
 
 <div class='post'>
-<blockquote>Here's an easy way to launch on time and on budget: keep them fixed. Never throw more time or money at a problem, just scale back the scope.<br />[...]<br />If you can't fit everything in within the time and budget allotted then don't expand the time and budget. Instead, pull back the scope. There's always time to add stuff later — later is eternal, now is fleeting.<cite>-- <a href="http://www.37signals.com/">37signals</a>, <a href="http://gettingreal.37signals.com/ch02_Fix_Time_and_Budget_Flex_Scope.php">Getting Real</a>.</cite></blockquote></div>
+<blockquote>Here's an easy way to launch on time and on budget: keep them fixed. Never throw more time or money at a problem, just scale back the scope.<br />[...]<br />If you can't fit everything in within the time and budget allotted then don't expand the time and budget. Instead, pull back the scope. There's always time to add stuff later — later is eternal, now is fleeting.<cite> <a href="http://www.37signals.com/">37signals</a>, <a href="http://gettingreal.37signals.com/ch02_Fix_Time_and_Budget_Flex_Scope.php">Getting Real</a>.</cite></blockquote></div>
